--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -27,7 +27,7 @@
                 <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
               </mat-form-field>
             </div>
-            <div class="col-md-2 p-t-20 main-color">
+            <!-- <div class="col-md-2 p-t-20 main-color">
               <button mat-button class="pull-right" (click)="openDialog1()">
                 Comment
               </button>
@@ -36,7 +36,7 @@
               <button mat-button class="pull-right" (click)="openDialog2()">
                 View Terms & Conditions/Documents
               </button>
-            </div>
+            </div> -->
           </div>
 
           <!-- second row -->
