--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -1,7 +1,7 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
-      [projectDetails]="product"></card-layout>
+    <card-layout *ngIf="projectData" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
+      [projectDetails]="projectData"></card-layout>
     <div class="row p-t-10 p-b-10">
       <div class="col-sm-12">
         <span>
