--- a/src/app/features/rfq/quantity-makes/quantity-makes.component.html
+++ b/src/app/features/rfq/quantity-makes/quantity-makes.component.html
@@ -50,7 +50,7 @@
     <form [formGroup]="materialForms">
       <mat-accordion class="accordion-padding-zero" formArrayName="forms">
         <ng-template ngFor let-material [ngForOf]="checkedMaterialsList" let-mati="index">
-          <mat-expansion-panel>
+          <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 {{material.projectName}}
