--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -8,19 +8,19 @@
       <!-- Topmost Status -->
       <mat-card class="m-t-40 m-b-20">
         <div class="row">
-          <div class="right-pipe" style="width: 20%;">
+          <div class="right-pipe" style="width: 25%;">
             <span class="p-l-30 p-r-20 pull-left">23</span>
             <span class="pull-left">Approved PO</span>
           </div>
-          <div class="right-pipe" style="width: 20%;">
+          <div class="right-pipe" style="width: 25%;">
             <span class="p-l-10 p-r-20 pull-left">23</span>
             <span class="pull-left">Total Project</span>
           </div>
-          <div class="right-pipe" style="width: 20%;">
+          <div class="right-pipe" style="width: 25%;">
             <span class="p-l-10 p-r-20 pull-left">23</span>
             <span class="pull-left">Completed Indent</span>
           </div>
-          <div class="right-pipe" style="width: 20%;">
+          <div  style="width: 25%;">
             <span class="p-l-10 p-r-20 pull-left">23</span>
             <span class="pull-left">Ongoing Indent</span>
           </div>
@@ -28,9 +28,9 @@
       </mat-card>
 
       <!-- Accordion for PO Lists -->
-      <mat-accordion>
+      
         <div *ngIf="poDetails.sendForApprovalPOList">
-          <mat-expansion-panel class="myPanel">
+          <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 PO For Approval
@@ -92,8 +92,9 @@
             </div>
           </mat-expansion-panel>
         </div>
-        <div *ngIf="poDetails.draftedPOList">
-          <mat-expansion-panel class="myPanel">
+        <br>
+          <div *ngIf="poDetails.draftedPOList">
+          <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 Drafted PO
@@ -138,14 +139,14 @@
                 <ng-container matColumnDef="ViewGRN">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/view-grn/',element.purchaseOrderId]">View GRN</a>
+                    <!-- <a [routerLink]="['../../po/view-grn/',element.purchaseOrderId]">View GRN</a> -->
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="AddGRN">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/add-grn/',element.purchaseOrderId]">Add GRN</a>
+                    <!-- <a [routerLink]="['../../po/add-grn/',element.purchaseOrderId]">Add GRN</a> -->
                   </td>
                 </ng-container>
 
@@ -155,8 +156,9 @@
             </div>
           </mat-expansion-panel>
         </div>
+        <br>
         <div *ngIf="poDetails.acceptedRejectedPOList">
-          <mat-expansion-panel class="myPanel">
+          <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 Approved/Rejected PO
@@ -218,5 +220,3 @@
             </div>
           </mat-expansion-panel>
         </div>
-
-      </mat-accordion>
