--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -22,7 +22,7 @@
             <div class="col-md-4">
               RFQ End Date
               <mat-form-field class="border-input">
-                <input matInput [matDatepicker]="dueDate" placeholder="Project Start Date" formControlName="dueDate" />
+                <input matInput [matDatepicker]="dueDate" formControlName="dueDate" />
                 <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                 <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
               </mat-form-field>
