--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 text-right">
       <button mat-raised-button class="main-background-color main-button color-white m-b-5"
         [routerLink]="['../../po/initiate-po']">
-        Inititate Po
+        Inititate PO
       </button>
       <!-- Topmost Status -->
       <mat-card class="m-t-40 m-b-20">
