--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12 text-right p-b-10">
             <span>
                 <mat-form-field class="border-input p-r-20">
-                    <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchText"
+                    <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText"
                         [ngModelOptions]="{standalone: true}" />
                     <button mat-button matSuffix mat-icon-button>
                         <mat-icon>search</mat-icon>
