--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -1,4 +1,5 @@
 <h1 mat-dialog-title>Select Address</h1>
+<!-- class="mat-tab-add-address-modal-po" -->
 <div mat-dialog-content class="mat-tab-add-address-modal-po">
     <mat-tab-group class="overflow-remove">
         <mat-tab label="Choose Address" class="addressDialog">
