--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -462,12 +462,12 @@ mat-icon {
 
 .mat-tab-add-address-modal-po{
     .mat-tab-body-wrapper{
-        height: calc(100vh - 300px);
+        height: 225px;
     }
-    .show-address-po-modal{
-        max-height: calc(100vh - 350px);
-        overflow-y: auto;
-    }
+    // .show-address-po-modal{
+    //     max-height: calc(100vh - 350px);
+    //     overflow-y: auto;
+    // }
 }
 
 .send-btn-select-po{
