Alignment Done Table -- PO Detail List Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/add-grn/add-grn.component.html
+++ b/src/app/features/po/add-grn/add-grn.component.html
@@ -9,7 +9,7 @@
                     </button>
                 </div>
                 <div class="pull-right p-l-10 p-r-10">
-                    <button mat-raised-button class="background-white-color main-color main-button ">
+                    <button (click)="goBack()" mat-raised-button class="background-white-color main-color main-button ">
                         Back
                     </button>
                 </div>
