--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -1,9 +1,9 @@
 <div class="page-start-point">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
         <div class="row p-t-20 p-b-20">
-            <div class="col-xs-6">PO Name: 5672829</div>
+            <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div>
             <div class="col-xs-6">
-                <button mat-raised-button class="background-white-color main-color main-button pull-right">
+                <button (click)="viewBack()" mat-raised-button class="background-white-color main-color main-button pull-right">
                     Back
                 </button>
             </div>
@@ -21,7 +21,7 @@
                                 <div class="col-md-4">
                                        {{ grnHeader.grnDate | date }}
                                 </div>
-                                <div class="col-md-4">
+                                <!-- <div class="col-md-4">
                                     <div class="pull-right p-l-10 p-r-10">
                                         <mat-icon>cloud_download</mat-icon>
                                     </div>
@@ -33,7 +33,7 @@
                                     <div class="pull-right p-l-10 p-r-10">
                                         <mat-icon>descriptions</mat-icon>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </mat-panel-title>
                     </mat-expansion-panel-header>
@@ -43,6 +43,11 @@
                             <ng-container matColumnDef="Material Name">
                                 <th mat-header-cell *matHeaderCellDef>Material Name</th>
                                 <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
+                            </ng-container>
+
+                              <ng-container matColumnDef="Brand Name">
+                                <th mat-header-cell *matHeaderCellDef>Brand Name</th>
+                                <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
                             </ng-container>
 
                             <ng-container matColumnDef="Awarded Quantity">
@@ -59,12 +64,12 @@
                                 </td>
                             </ng-container>
 
-                            <ng-container matColumnDef="Date">
+                            <!-- <ng-container matColumnDef="Date">
                                 <th mat-header-cell *matHeaderCellDef>Date</th>
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.deliveredDate | date }}
                                 </td>
-                            </ng-container>
+                            </ng-container> -->
 
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
