--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -300,6 +300,11 @@ a:hover {
 .myPanel .mat-expansion-panel-body {
   padding: 0;
 }
+// .myPanel{
+//   box-shadow: none !important;
+//   border-left: 1px solid rgba(0,0,0,.12);
+//   border-right: 1px solid rgba(0,0,0,.12);
+// }
 
 .dark-gray-color {
   color: $background-color-grey;
