--- a/src/app/features/rfq/suppliers/suppliers.component.html
+++ b/src/app/features/rfq/suppliers/suppliers.component.html
@@ -81,7 +81,8 @@
       </div>
     </div>
 
-    <table
+    <div *ngIf="allSuppliers && allSuppliers.length>0">
+          <table
       mat-table
       [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'"
       class="mat-elevation-z8 col-sm-12"
@@ -126,5 +127,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+    </div>
+  
   </div>
 </div>
