--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -38,38 +38,38 @@
 
 
           
-          <ng-container matColumnDef="username">
-            <th mat-header-cell *matHeaderCellDef>username</th>
+          <ng-container matColumnDef="User Name">
+            <th mat-header-cell *matHeaderCellDef>User Name</th>
             <td mat-cell *matCellDef="let element">{{ element.ProjectUser.firstName}} {{element.ProjectUser.lastName}}</td>
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef>email</th>
+          <ng-container matColumnDef="Email Id">
+            <th mat-header-cell *matHeaderCellDef>Email Id</th>
             <td mat-cell *matCellDef="let element">
               {{ element.ProjectUser.email }}
             </td>
           </ng-container>
 
           <!-- Weight Column -->
-          <ng-container matColumnDef="contactNo">
-            <th mat-header-cell *matHeaderCellDef>contactNo</th>
+          <ng-container matColumnDef="Phone">
+            <th mat-header-cell *matHeaderCellDef>Phone</th>
             <td mat-cell *matCellDef="let element">
               {{ element.ProjectUser.contactNo }}
             </td>
           </ng-container>
 
           <!-- Symbol Column -->
-          <ng-container matColumnDef="roleName">
-            <th mat-header-cell *matHeaderCellDef>roleName</th>
+          <ng-container matColumnDef="Role">
+            <th mat-header-cell *matHeaderCellDef>Role</th>
             <td mat-cell *matCellDef="let element">
               {{ element.ProjectUser.roleName }}
             </td>
           </ng-container>
 
         <!-- Symbol Column -->
-          <ng-container matColumnDef="ProjectList">
-            <th mat-header-cell *matHeaderCellDef  class="project-user-details-width">ProjectList</th>
+          <ng-container matColumnDef="Project">
+            <th mat-header-cell *matHeaderCellDef  class="project-user-details-width">Project</th>
             <td mat-cell *matCellDef="let element"  class="project-user-details-width">
               <ng-container *ngFor = "let x of element.ProjectList">
                 <button mat-button class="btn-project-user-details">
@@ -98,7 +98,7 @@
 </ng-container>
 <p></p>
 
-<ng-container *ngIf="dataSourceActivate && dataSourceActivate.length > 0">
+<ng-container *ngIf="dataSourceDeactivate && dataSourceDeactivate.length > 0">
   <mat-expansion-panel  class="myPanel" [expanded]="true">
     <mat-expansion-panel-header>
       <div class="row p-t-10 p-b-10">
@@ -117,38 +117,38 @@
                   The actual rendered columns are set as a property on the row definition" -->
 
           <!-- Position Column -->
-          <ng-container matColumnDef="username">
-            <th mat-header-cell *matHeaderCellDef>username</th>
+          <ng-container matColumnDef="User Name">
+            <th mat-header-cell *matHeaderCellDef>User Name</th>
             <td mat-cell *matCellDef="let element">{{ element.ProjectUser.firstName}} {{element.ProjectUser.lastName}}</td>
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef>email</th>
+          <ng-container matColumnDef="Email Id">
+            <th mat-header-cell *matHeaderCellDef>Email Id</th>
             <td mat-cell *matCellDef="let element">
               {{ element.ProjectUser.email }}
             </td>
           </ng-container>
 
           <!-- Weight Column -->
-          <ng-container matColumnDef="contactNo">
-            <th mat-header-cell *matHeaderCellDef>contactNo</th>
+          <ng-container matColumnDef="Phone">
+            <th mat-header-cell *matHeaderCellDef>Phone</th>
             <td mat-cell *matCellDef="let element">
               {{ element.ProjectUser.contactNo }}
             </td>
           </ng-container>
 
           <!-- Symbol Column -->
-          <ng-container matColumnDef="roleName">
-            <th mat-header-cell *matHeaderCellDef>roleName</th>
+          <ng-container matColumnDef="Role">
+            <th mat-header-cell *matHeaderCellDef>Role</th>
             <td mat-cell *matCellDef="let element">
               {{ element.ProjectUser.roleName }}
             </td>
           </ng-container>
 
         <!-- Symbol Column -->
-          <ng-container matColumnDef="ProjectList">
-            <th mat-header-cell *matHeaderCellDef  class="project-user-details-width">ProjectList</th>
+          <ng-container matColumnDef="Project">
+            <th mat-header-cell *matHeaderCellDef  class="project-user-details-width">Project</th>
             <td mat-cell *matCellDef="let element"  class="project-user-details-width">
               <ng-container *ngFor = "let x of element.ProjectList">
                 <button mat-button class="btn-project-user-details">
