1. Pop Ups Header with Close Button Done 2. Add Edit Project PopUp Done Design 3. Height of MATERIAL TABLE FIXED Headers and Rows 4. Quantity of Mat Table are now showing at the center 5. Dashboard TILE Redesigned 6. Routing to Indent, Material and PO From Tile Done 7. delete and edit alignment done 8. GST Added in projects Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
     <!-- fix part -->
     <div class="row p-t-15 p-b-10">
       <div class="col-xs-6">
-        <mat-form-field class="example-form-field">
+        <mat-form-field class="example-form-field border-input">
           <input
             matInput
             placeholder="Search Projects"
