--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -1,5 +1,11 @@
-<h1 mat-dialog-title>Confirmation</h1>
-<div mat-dialog-content>
+  <div class="header-add-edit-dialog">
+      <h1 mat-dialog-title>Confirmation</h1>
+      <button type="button" class="close" (click)="close()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+  </div>
+  <br>
+<div mat-dialog-content class="padding-for-dialog-after-header">
   <p class="text-center">Are you sure you want to add RFQ?</p>
 </div>
 <div mat-dialog-actions>
