--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -38,8 +38,8 @@
 
         <!-- Weight Column -->
         <ng-container matColumnDef="Total No Of Material">
-          <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef  class="text-align-center">Total No Of Material</th>
+          <td mat-cell *matCellDef="let element"  class="text-align-center">
             {{ element.materialCount }}
           </td>
         </ng-container>
@@ -100,8 +100,8 @@
 
         <!-- Weight Column -->
         <ng-container matColumnDef="Total No Of Material">
-          <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef  class="text-align-center">Total No Of Material</th>
+          <td mat-cell *matCellDef="let element"  class="text-align-center">
             {{ element.materialCount }}
           </td>
         </ng-container>
