--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -115,22 +115,22 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Total Material">
-                  <th mat-header-cell *matHeaderCellDef>Total Material</th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef  class="text-align-center">Total Material</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
                     {{ element.totalMaterials }}
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="PO Amount">
-                  <th mat-header-cell *matHeaderCellDef>PO Amount</th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef  class="text-align-right">PO Amount</th>
+                  <td mat-cell *matCellDef="let element"  class="text-align-right">
                     {{ element.poAmount }}
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="ViewPo">
-                  <th mat-header-cell *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                  <td mat-cell *matCellDef="let element" class="text-align-center">
                     <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]" [state]="{mode:'edit'}">view
                       po</a>
                   </td>
@@ -180,37 +180,37 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Total Material">
-                  <th mat-header-cell *matHeaderCellDef>Total Material</th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef  class="text-align-center">Total Material</th>
+                  <td mat-cell  class="text-align-center" *matCellDef="let element">
                     {{ element.totalMaterials }}
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="PO Amount">
-                  <th mat-header-cell *matHeaderCellDef>PO Amount</th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef  class="text-align-right">PO Amount</th>
+                  <td mat-cell *matCellDef="let element"  class="text-align-right">
                     {{ element.poAmount }}
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="ViewPo">
-                  <th mat-header-cell *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
                     <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]" [state]="{mode:'view'}">view
                       po</a>
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="ViewGRN">
-                  <th mat-header-cell *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
                     <a [routerLink]="['../../po/view-grn/',element.purchaseOrderId]">View GRN</a>
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="AddGRN">
-                  <th mat-header-cell *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
                     <a [routerLink]="['../../po/add-grn/',element.purchaseOrderId]">Add GRN</a>
                   </td>
                 </ng-container>
