--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -40,8 +40,8 @@
 
     </div>
 
-
-    <mat-accordion>
+  <div class="rfq-list-detail-custom">
+     <mat-accordion>
       <mat-expansion-panel  class="myPanel" [expanded]="true">
         <mat-expansion-panel-header>
           <mat-panel-title>
@@ -70,21 +70,21 @@
             </ng-container>
 
             <ng-container matColumnDef="Projects">
-              <th mat-header-cell *matHeaderCellDef>Projects</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Projects</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{ element.projectCount }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="Total Material">
-              <th mat-header-cell *matHeaderCellDef>Total Material</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{ element.materialCount }}
               </td>
             </ng-container>
             <ng-container matColumnDef="Total Supplier">
-              <th mat-header-cell *matHeaderCellDef>Total Supplier</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{
                   element.supplierList != null
                     ? element.supplierList.length
@@ -93,15 +93,15 @@
               </td>
             </ng-container>
             <ng-container matColumnDef="action1">
-              <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element"  class="action1">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+              <td mat-cell *matCellDef="let element"  class="action1" class="text-align-center">
                 <a [routerLink]="['../rfq-view', element.rfqId]">View RFQ</a>
               </td>
             </ng-container>
             <ng-container matColumnDef="action2">
               <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element;let i=index"  class="action2">
-                <a [routerLink]="['../rfq-bid/',element.rfqId]">View Bids</a>
+              <td mat-cell *matCellDef="let element;let i=index"  class="action2" class="text-align-center">
+                <a [routerLink]="['../rfq-bid/',element.rfqId]" class="text-align-center">View Bids</a>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -111,7 +111,7 @@
       </mat-expansion-panel>
     </mat-accordion>
     <br>
-    <mat-accordion>
+    <mat-accordion *ngIf="closeRfqList">
       <mat-expansion-panel  class="myPanel" [expanded]="true">
         <mat-expansion-panel-header>
           <mat-panel-title>
@@ -140,21 +140,21 @@
             </ng-container>
 
             <ng-container matColumnDef="Projects">
-              <th mat-header-cell *matHeaderCellDef>Projects</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Projects</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{ element.projectCount }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="Total Material">
-              <th mat-header-cell *matHeaderCellDef>Total Material</th>
-              <td mat-cell *matCellDef="let row">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
+              <td mat-cell *matCellDef="let row" class="text-align-center">
                 {{ row.materialCount }}
               </td>
             </ng-container>
             <ng-container matColumnDef="Total Supplier">
-              <th mat-header-cell *matHeaderCellDef>Total Supplier</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{
                   element.supplierList != null
                     ? element.supplierList.length
@@ -181,6 +181,8 @@
         </div>
       </mat-expansion-panel>
     </mat-accordion>
+  </div>
+   
 
 
   </div>
