--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -1,7 +1,6 @@
 <a
   href="javascript:void(0)"
   class="box-shadow"
-  (click)="navigationToBOM(projectDetails.projectId, projectDetails)"
 >
   <mat-card class="m-t-5 m-b-10">
     <mat-card-content class="mat-card-content">
@@ -14,43 +13,46 @@
             alt="Photo of a Shiba Inu"
           />
         </div>
-        <div class="col-md-10 col-xs-12">
+        <div class="col-md-10 col-xs-12 card-project-dialog">
           <div class="row">
             <div class="col-xs-10">
               <div class="text-bold">
-                <a class="main-color font-size14" href="javascript:void(0)">{{
+                <a class="main-color card-project-name" href="javascript:void(0)">{{
                   projectDetails.projectName
                 }}</a>
               </div>
               <div class="row">
                 <div class=" col-xs-8 display-flex">
-                  <div class="font-size12 gray-color text-left width50Percent">
-                    <i class="material-icons font-size12 gray-color">room</i>
-                    <span>{{ projectDetails.addressLine1 }}</span>
+                  <div class="font-size12  color-text-card text-left width50Percent line-height">
+                    <i class="material-icons font-size12 color-text-card">room</i>
+                    <span class="p-l-5">{{ projectDetails.addressLine1 }}</span>
                   </div>
-                  <div class="font-size12 gray-color text-left width50Percent">
-                    <i class="material-icons font-size12 gray-color"
+                  <div class="font-size12 color-text-card text-left width50Percent">
+                    <i class="material-icons font-size12 color-text-card"
                       >format_shapes</i
                     >
-                    <span>Project Area: {{ projectDetails.area }}</span>
+                    <span class="p-l-5">Project Area: {{ projectDetails.area }}</span>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class=" col-xs-8 display-flex">
-                  <div class="font-size12 gray-color text-left width50Percent">
-                    <i class="material-icons font-size12 gray-color">today</i>
-                    <span>{{ projectDetails.startDate | date }}</span> to
-                    <span>{{ projectDetails.endDate | date }}</span>
+                  <div class="font-size12 color-text-card text-left width50Percent">
+                    <i class="material-icons font-size12 color-text-card">today</i>
+                    <span class="p-l-5">{{ projectDetails.startDate | date }}</span> to
+                    <span class="p-l-5">{{ projectDetails.endDate | date }}</span>
                   </div>
-                  <div class="font-size12 gray-color text-left width50Percent">
-                    <span>₹ Construction Cost: {{ projectDetails.cost  | number : '1.2-2' }} Cr</span>
+                  <div class="font-size12 color-text-card text-left width50Percent">
+                    <span>₹<span class="p-l-5">
+                       Construction Cost: {{ projectDetails.cost  | number : '1.2-2' }} Cr
+                    </span>
+                    </span>
                   </div>
                 </div>
               </div>
               <!-- <div class="row">
                       <div class=" col-xs-6 display-flex">
-                          <div class="font-size12 gray-color text-left width50Percent"><i class="material-icons font-size12 gray-color">room</i> <span>{{projectDetails.addressLine2}}</span></div>
+                          <div class="font-size12 color-text-card text-left width50Percent"><i class="material-icons font-size12 color-text-card">room</i> <span>{{projectDetails.addressLine2}}</span></div>
                       </div>    
                     </div> -->
             </div>
@@ -60,22 +62,23 @@
               > -->
               <a
                 href="javascript:void(0)"
+                (click)="edit(projectDetails.projectId, $event)"
+                ><i class="material-icons main-color">edit</i></a
+              >
+              <a
+                href="javascript:void(0)"
                 (click)="delete(projectDetails.projectId, $event)"
                 class="p-l-10 p-r-10"
                 ><i class="material-icons main-color">delete</i></a
               >
-              <a
-                href="javascript:void(0)"
-                (click)="edit(projectDetails.projectId, $event)"
-                ><i class="material-icons main-color">edit</i></a
-              >
+              
             </div>
           </div>
           <div class="row m-t-20">
             <div class="col-xs-8">
-              <div class="border-container display-flex p-l-5 p-r-5">
+              <div class="display-flex display-material-indent-po-box p-l-5 p-r-5">
                 <!-- <div
-                  class="col-sm-2 border-right border-container-txt p-t-10 p-b-10 display-flex"
+                  class="col-sm-2  border-container-txt p-t-10 p-b-10 display-flex"
                 >
                   <div class="font-size20 text-bold">
                     {{ projectDetails.lowStockMaterialCount }}
@@ -83,37 +86,56 @@
                   <div class="font-size12 p-l-15">Low Stock Material</div>
                 </div> -->
                 <div
-                  class="col-sm-4 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
+                  class="col-sm-4 box-custom color-text-card p-t-10  display-flex" (click)="navigationToBOM(projectDetails.projectId, projectDetails)"  matTooltip="View All Materials"
                 >
                   <div class="font-size20 text-bold">
-                    {{ projectDetails.matCount }}
+                    <span *ngIf="projectDetails.matCount">
+                        {{ projectDetails.matCount }}
+                    </span>
+                      <span *ngIf="!projectDetails.matCount">
+                        0
+                    </span>
                   </div>
                   <div class="font-size12 p-l-15">
                     All<br />
-                    Material
+                    Materials
                   </div>
                 </div>
                 <div
-                  class="col-sm-4 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
+                  class="col-sm-4 box-custom color-text-card p-t-10  display-flex" (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
+                  matTooltip="View All Indents"
                 >
                   <div class="font-size20 text-bold">
-                    {{ projectDetails.openIndentCount }}
+                   <span *ngIf="projectDetails.openIndentCount">
+                     {{ projectDetails.openIndentCount }}
+                   </span>
+                     <span *ngIf="!projectDetails.openIndentCount">
+                      0
+                   </span>
+                    
                   </div>
                   <div class="font-size12 p-l-15">
                     Open<br />
                     Indents
                   </div>
                 </div>
-                <div class="col-sm-4 p-t-10 p-b-10 p-l-30 display-flex">
-                  <div class="font-size20 gray-color text-bold">
-                    {{ projectDetails.purchaseOrderCount }}
+                <div class="col-sm-4 p-t-10 box-custom display-flex" (click)="redirectToPurchaseOrder()" matTooltip="View All Purchase Orders">
+                  <div class="font-size20 color-text-card text-bold">
+                   <span *ngIf="projectDetails.purchaseOrderCount">
+                     {{ projectDetails.purchaseOrderCount }}
+                   </span> 
+                   <span *ngIf="!projectDetails.purchaseOrderCount">
+                    0
+                   </span> 
                   </div>
-                  <div class="font-size12 gray-color p-l-15">
+                  <div class="font-size12 color-text-card p-l-15">
                     Purchase<br />
-                    Order
+                    Orders
                   </div>
-                  <div class="font-size12 text-right p-l-25 m-t-15">
-                    ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
+                  <div class="font-size14 purchase-amount text-right p-l-25 m-t-15">
+                    <span *ngIf="projectDetails.purchaseOrderCost">
+                       ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
+                    </span>
                   </div>
                 </div>
               </div>
@@ -123,8 +145,8 @@
                   </div> -->
           </div>
           <div class="row m-t-10">
-            <div class="col-xs-12 text-right">
-              <div class="font-size12 gray-color">
+            <div class="col-xs-12 text-left">
+              <div class="font-size12 color-text-card">
                 Created : {{ projectDetails.createdAt | date: "fullDate" }} By
                 {{ projectDetails.createdBy }} (Site Enginer)
               </div>
