--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -1,6 +1,11 @@
 
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()">
-  <h1 mat-dialog-title>Add User</h1>
+ <div class="header-add-edit-dialog">
+      <h1 mat-dialog-title>Add User</h1>
+      <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+  </div>
       <!-- new structure -->
       <div class="col-sm-12">
         <!-- first row -->
