--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -1,5 +1,10 @@
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()">
-<h1 mat-dialog-title>Add Supplier</h1>
+  <div class="header-add-edit-dialog">
+      <h1 mat-dialog-title>Add Supplier</h1>
+      <button type="button" class="close" (click)="close()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+  </div>
 
 <div mat-dialog-content>
   
