--- a/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
+++ b/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
@@ -1,6 +1,12 @@
-<h1 mat-dialog-title>Confirmation</h1>
-<div mat-dialog-content>
-  <p class="text-center">Are you sureyou want to delete this project?</p>
+
+  <div class="header-add-edit-dialog">
+      <h1 mat-dialog-title>Confirmation</h1>
+      <button type="button" class="close" (click)="close()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+  </div>
+<div mat-dialog-content class="padding-for-dialog-after-header">
+  <p class="text-center">Are you sure you want to delete this project?</p>
 </div>
 <div mat-dialog-actions>
   <div class="col-sm-6">
