--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,4 +19,6 @@
     @import "./pages/bom.scss";
     @import "./pages/rfq-bids.component.scss";
     @import "./pages/supplier.scss";
-    @import "./pages/address-dialog.scss"
+    @import "./pages/address-dialog.scss";
+    @import "./pages/dialog-styles.scss";
+    @import "./pages/card-layout.scss";
