--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -102,3 +102,9 @@
         width: 87px !important;
     }
 }
+
+.rfq-list-detail-custom{
+    .mat-row .mat-cell {
+        min-width: 80px;
+    }
+}
