--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -1,23 +1,13 @@
-<form [formGroup]="signupForm" (ngSubmit)="signup()">
-    <div class="row m-0">
-        <div class="col-md-7">
-            <div class="min-height">
-                <img src="../../../assets/images/Signup.jpg" alt="construction-site-image" style="width: 100%;" />
-            </div>
-        </div>
-        <div class="col-md-5 parent">
-            <div class="row center-element">
-                <div class="col-xs-12 m-b-30">
-                    <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" style="height:60px" />
-                </div>
-                <div class="col-xs-12">
-                    <h2>Sign Up</h2>
-                </div>
-                <mat-form-field class="col-xs-12 border-input">
+<form [formGroup]="signupForm" (ngSubmit)="signup()" class="sign-up-form">
+ 
+                <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="firstName" type="text" placeholder="First Name" />
                 </mat-form-field>
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="lastName" type="text" placeholder="Last Name" />
+                </mat-form-field> -->
+                <mat-form-field class="col-xs-12 border-input">
+                    <input matInput type="text" formControlName="organisationName" placeholder="Company Name" />
                 </mat-form-field>
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput type="email" formControlName="email" placeholder="Email" />
@@ -25,11 +15,9 @@
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput type="text" formControlName="phone" placeholder="Phone No." />
                 </mat-form-field>
-                <mat-form-field class="col-xs-12 border-input">
-                    <input matInput type="text" formControlName="organisationName" placeholder="Organisation Name" />
-                </mat-form-field>
+                
                 <mat-form-field class="col-xs-12 border-select">
-                    <mat-select formControlName=organisationType>
+                    <mat-select formControlName="organisationType" placeholder="Contractor">
                         <mat-option *ngFor="let type of organisationTypes" [value]="type.value">
                             {{type.viewValue}}
                         </mat-option>
@@ -38,9 +26,9 @@
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="password" type="password" placeholder="Password" />
                 </mat-form-field>
-                <mat-form-field class="col-xs-12 border-input">
+                <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput type="password" formControlName="confirmPassword" placeholder="Retype Password" />
-                </mat-form-field>
+                </mat-form-field> -->
                 <div mat-dialog-actions class="col-xs-12 p-t-40">
                     <button mat-raised-button class="main-background-color main-button color-white m-b-5"
                         cdkFocusInitial style="width: 100%;">
@@ -53,7 +41,5 @@
                                 Sign In
                             </button>
                         </div> -->
-            </div>
-        </div>
-    </div>
+           
 </form>
