--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -48,8 +48,8 @@
         </ng-container>
 
          <!-- Name Column -->
-        <ng-container matColumnDef="Required Material">
-          <th mat-header-cell *matHeaderCellDef>Required Material</th>
+        <ng-container matColumnDef="Requested Material">
+          <th mat-header-cell *matHeaderCellDef>Requested Material</th>
         <td mat-cell *matCellDef="let element">  {{ element.requestedQuantity }} {{ element.materialUnit }}</td>
         </ng-container>
 
