--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,3 +22,4 @@
     @import "./pages/address-dialog.scss";
     @import "./pages/dialog-styles.scss";
     @import "./pages/card-layout.scss";
+    @import "./pages/signin-signup.scss";
