Password-eye implemented in signup & validators set for login and signup Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/signin-signup.scss
+++ b/src/assets/scss/pages/signin-signup.scss
@@ -2,6 +2,10 @@
     mat-form-field{
         width: 100%;
     }
+    small{
+        color: red;
+        font-size: 12px;
+    }
 }
 .sign-up-form{
     mat-form-field{
@@ -12,6 +16,11 @@
     }
     .mat-select-arrow-wrapper{
         padding-top:13px !important;
+    }
+
+    small{
+        color: red;
+        font-size: 12px;
     }
 }
 
