--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -1,7 +1,13 @@
 <form [formGroup]="signinForm" (ngSubmit)="signin()" class="sign-in-form">
   
         <mat-form-field class="col-xs-12 border-input">
-          <input matInput formControlName="userName" type="number" placeholder="Phone No." />
+          <input matInput formControlName="phone" type="number" placeholder="Phone No." />
+           <small
+                    *ngIf="signinForm.controls['phone'].hasError('required') && signinForm.controls['phone'].touched"
+                    class="signinForm-error-msg"> Phone No is required </small>
+                    <small
+                    *ngIf="signinForm.controls['phone'].hasError('pattern') && signinForm.controls['phone'].touched"
+                    class="signinForm-error-msg"> Enter Valid Phone No</small>
         </mat-form-field>
 
         <mat-form-field class="col-xs-12 border-input">
