--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -11,20 +11,37 @@
                 </mat-form-field>
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput type="email" formControlName="email" placeholder="Email" />
+                    <small
+                    *ngIf="signupForm.controls['email'].hasError('required') && signupForm.controls['email'].touched"
+                    class="signupForm-error-msg"> Email is required </small>
+                    <small
+                    *ngIf="signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched"
+                    class="signupForm-error-msg"> Enter Valid Email</small>
+
                 </mat-form-field>
                 <mat-form-field class="col-xs-12 border-input">
-                    <input matInput type="text" formControlName="phone" placeholder="Phone No." />
+                    <input matInput type="number" formControlName="phone" placeholder="Phone No." />
+                     <small
+                    *ngIf="signupForm.controls['phone'].hasError('required') && signupForm.controls['phone'].touched"
+                    class="signupForm-error-msg"> Phone No is required </small>
+                    <small
+                    *ngIf="signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched"
+                    class="signupForm-error-msg"> Enter Valid Phone No</small>
                 </mat-form-field>
                 
-                <mat-form-field class="col-xs-12 border-select">
+                <!-- <mat-form-field class="col-xs-12 border-select">
                     <mat-select formControlName="organisationType" placeholder="Contractor">
                         <mat-option *ngFor="let type of organisationTypes" [value]="type.value">
                             {{type.viewValue}}
                         </mat-option>
                     </mat-select>
-                </mat-form-field>
+                </mat-form-field> -->
+
                 <mat-form-field class="col-xs-12 border-input">
-                    <input matInput formControlName="password" type="password" placeholder="Password" />
+                     <input matInput [type]="showPassWordString? 'text': 'password'" formControlName="password" placeholder="Password" />
+                    <a>
+                        <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
+                    </a>
                 </mat-form-field>
                 <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput type="password" formControlName="confirmPassword" placeholder="Retype Password" />
